[package]
name = "btcdomain-resolve-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "2.0.3", features = ["mysql", "chrono"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
lazy_static = "1.4.0"
crossbeam = "0.8.2"


[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_mysql_pool"]
