[package]
name = "btcdomain_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.3", features = ["mysql", "chrono", "r2d2"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
lazy_static = "1.4.0"
crossbeam = "0.8.2"
dotenv = "0.15.0"
serde_json = "1.0.96"
secp256k1 = { version = "0.20.3", features = ["rand"] }
sha2 = "0.10.6"
hex = "0.4"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_cors = { git = "https://github.com/SparkHao/rocket_cors.git", branch = "match_rocket_0.5.0_rc3"}
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
fs2 = "0.4.3"
tokio = {version = "1.28.0", features = ["rt"]}



[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.2"
features = ["diesel_mysql_pool"]
